--- a/BuiltinRenderPineline/Packages/manifest.json
+++ b/BuiltinRenderPineline/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.recorder": "2.5.7",
     "com.unity.ugui": "1.0.0",
     "jp.keijiro.klak.ndi": "file:../../jp.keijiro.klak.ndi",
     "org.nuget.system.memory": "4.5.3",
